--- a/Toolbox/Types/Types.vcxproj.filters
+++ b/Toolbox/Types/Types.vcxproj.filters
@@ -57,5 +57,8 @@
     <ClCompile Include="Percent.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LinCombVector.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
