--- a/Toolbox/Types/Types.vcxproj
+++ b/Toolbox/Types/Types.vcxproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build"  ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -23,6 +23,7 @@
     <ClCompile Include="BasicTypes.ixx" />
     <ClCompile Include="CircleType.ixx" />
     <ClCompile Include="EllipseType.ixx" />
+    <ClCompile Include="LinCombVector.ixx" />
     <ClCompile Include="LineType.ixx" />
     <ClCompile Include="MoreTypes.ixx" />
     <ClCompile Include="NamedType.ixx" />
