--- a/NNet/NNetCommands/NNetCommands.vcxproj.filters
+++ b/NNet/NNetCommands/NNetCommands.vcxproj.filters
@@ -201,5 +201,8 @@
     <ClCompile Include="SetScanAreaCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ArrowAnimationCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
