DeletePanelCmd.ixx implemented

--- a/NNet/NNetViewer/NNetViewer.vcxproj.filters
+++ b/NNet/NNetViewer/NNetViewer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="ScanViewer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DeletePanelCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NNetViewer.rc">
