--- a/NNet/NNetViewer/NNetViewer.vcxproj
+++ b/NNet/NNetViewer/NNetViewer.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DeletePanelCmd.ixx" />
     <ClCompile Include="EventViewer.cpp" />
     <ClCompile Include="EventViewer.ixx" />
     <ClCompile Include="PanelPlatform.cpp" />
