some refactoring. ScanViewer still crashing sometimes, but seems to be a bit more stable.

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_APPL_WINDOW -1848 1133 1703 988
-MoveWindow IDM_MAIN_WINDOW -1839 1186 1685 906
-MoveWindow IDM_MINI_WINDOW -723 1160 363 363
-MoveWindow IDM_MONITOR_WINDOW -1775 1698 548 334
+MoveWindow IDM_APPL_WINDOW -1848 1133 1705 990
+MoveWindow IDM_MAIN_WINDOW -1839 1186 1687 908
+MoveWindow IDM_MINI_WINDOW -723 1160 365 365
+MoveWindow IDM_MONITOR_WINDOW -1775 1698 550 336
 MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -371 1693 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 355 355
-MoveWindow IDM_SIG_DESIGNER -725 1408 555 455
-MoveWindow IDM_LUT_DESIGNER -797 1745 355 255
-MoveWindow IDM_VIEWER_WINDOW 472 283 1658 868
+MoveWindow IDM_DESC_WINDOW -1506 1352 357 357
+MoveWindow IDM_SIG_DESIGNER -725 1408 557 457
+MoveWindow IDM_LUT_DESIGNER -797 1745 357 257
+MoveWindow IDM_VIEWER_WINDOW -797 1745 357 257
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -19,4 +19,4 @@ ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
 ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
-ShowWindow IDM_VIEWER_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_VIEWER_WINDOW SW_HIDE
