--- a/Evo/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/Evo/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -18,23 +18,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EvolutionCoreImpl.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="MortalityTable.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="EvolutionCoreWrapperHelpers.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="EvolutionCoreWrappers.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="geneTypeLimits.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="Config.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
@@ -204,6 +187,18 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="GridPoint24.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvolutionCoreImpl.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="MortalityTable.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvolutionCoreWrappers.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="EvolutionCoreWrapperHelpers.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
