--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_APPL_WINDOW -1842 1099 1720 1005
-MoveWindow IDM_MAIN_WINDOW -1833 1152 1702 923
-MoveWindow IDM_MINI_WINDOW -723 1160 380 380
-MoveWindow IDM_MONITOR_WINDOW -1775 1698 565 351
+MoveWindow IDM_APPL_WINDOW -1842 1099 1721 1006
+MoveWindow IDM_MAIN_WINDOW -1833 1152 1703 924
+MoveWindow IDM_MINI_WINDOW -723 1160 381 381
+MoveWindow IDM_MONITOR_WINDOW -1775 1698 566 352
 MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -397 1643 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 372 372
-MoveWindow IDM_SIG_DESIGNER -725 1408 572 472
-MoveWindow IDM_LUT_DESIGNER -797 1745 372 272
-MoveWindow IDM_VIEWER_WINDOW -797 1745 372 272
+MoveWindow IDM_DESC_WINDOW -1506 1352 373 373
+MoveWindow IDM_SIG_DESIGNER -725 1408 573 473
+MoveWindow IDM_LUT_DESIGNER -797 1745 373 273
+MoveWindow IDM_VIEWER_WINDOW -797 1745 373 273
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -19,4 +19,4 @@ ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
 ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
-ShowWindow IDM_VIEWER_WINDOW SW_HIDE
+ShowWindow IDM_VIEWER_WINDOW SW_SHOWNORMAL
