--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -240,7 +240,7 @@
     <ClCompile Include="WrapSetScales.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="win32_tooltip.cpp">
+    <ClCompile Include="Win32_Tooltip.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
