--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="Input.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="RunTime.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
