WinBasics module and more cleanup

--- a/Toolbox/WinBasics/WinBasics.vcxproj
+++ b/Toolbox/WinBasics/WinBasics.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Win32_PIXEL.cpp" />
     <ClCompile Include="Win32_PIXEL.ixx" />
+    <ClCompile Include="WinBasics.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IoUtil\IoUtil.vcxproj">
