--- a/Toolbox/WinBasics/WinBasics.vcxproj.filters
+++ b/Toolbox/WinBasics/WinBasics.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Win32_PIXEL.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WinBasics.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
