--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -105,5 +105,11 @@
     <ClCompile Include="NNetUtilities.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IconUndo.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IconRedo.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
