--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1842 1099 1737 1022
-MoveWindow IDM_MAIN_WINDOW -1833 1152 1719 940
-MoveWindow IDM_MINI_WINDOW -723 1160 397 397
-MoveWindow IDM_MONITOR_WINDOW -1775 1698 582 368
+MoveWindow IDM_APPL_WINDOW -1842 1099 1739 1024
+MoveWindow IDM_MAIN_WINDOW -1833 1152 1721 942
+MoveWindow IDM_MINI_WINDOW -723 1160 399 399
+MoveWindow IDM_MONITOR_WINDOW -1433 1332 584 427
 MoveWindow IDM_CRSR_WINDOW -733 1521 302 227
 MoveWindow IDM_PARAM_WINDOW -1895 1317 282 556
 MoveWindow IDM_PERF_WINDOW -397 1643 302 352
-MoveWindow IDM_DESC_WINDOW -1506 1352 389 389
-MoveWindow IDM_SIG_DESIGNER -725 1408 589 489
-MoveWindow IDM_LUT_DESIGNER -797 1745 389 289
-MoveWindow IDM_VIEWER_WINDOW -797 1745 389 289
+MoveWindow IDM_DESC_WINDOW -1506 1352 391 391
+MoveWindow IDM_SIG_DESIGNER -725 1408 591 491
+MoveWindow IDM_LUT_DESIGNER -797 1745 391 291
+MoveWindow IDM_VIEWER_WINDOW -797 1745 391 291
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
