--- a/Toolbox/BasicUtils/BasicUtils.vcxproj.filters
+++ b/Toolbox/BasicUtils/BasicUtils.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="Util.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FatalError.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StackTrace.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
