#include <cassert> removed

--- a/NNet/NNetSimu/WindowConfiguration2.cnf
+++ b/NNet/NNetSimu/WindowConfiguration2.cnf
@@ -1,10 +1,22 @@
-MoveWindow IDM_APPL_WINDOW -1799 1157 1658 868
-MoveWindow IDM_MAIN_WINDOW -1790 1210 1640 786
-MoveWindow IDM_MINI_WINDOW 0 0 313 313
-MoveWindow IDM_MONITOR_WINDOW -1430 1263 1103 374
+MoveWindow IDM_APPL_WINDOW -1799 1157 1659 869
+MoveWindow IDM_MAIN_WINDOW -1790 1210 1641 787
+MoveWindow IDM_MINI_WINDOW 0 0 314 314
+MoveWindow IDM_MONITOR_WINDOW -1430 1263 1104 375
 MoveWindow IDM_CRSR_WINDOW 0 300 302 227
 MoveWindow IDM_PARAM_WINDOW 60 104 282 556
 MoveWindow IDM_PERF_WINDOW 0 0 302 352
-MoveWindow IDM_DESC_WINDOW 0 0 313 313
-MoveWindow IDM_SIG_DESIGNER 100 100 513 413
-MoveWindow IDM_LUT_DESIGNER 200 200 308 208
+MoveWindow IDM_DESC_WINDOW 0 0 314 314
+MoveWindow IDM_SIG_DESIGNER 100 100 514 414
+MoveWindow IDM_LUT_DESIGNER 200 200 309 209
+MoveWindow IDM_VIEWER_WINDOW 182 182 1647 857
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_VIEWER_WINDOW SW_SHOWNORMAL
