--- a/Toolbox/BasicUtils/BasicUtils.vcxproj
+++ b/Toolbox/BasicUtils/BasicUtils.vcxproj
@@ -123,6 +123,7 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <EnableModules>true</EnableModules>
       <BuildStlModules>true</BuildStlModules>
+      <ExceptionHandling>false</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>
